fixed spacing bugs in nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -188,6 +188,7 @@ header {
 }
 header .nav-bar {
   max-width: 800px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -203,7 +204,7 @@ header .nav-bar {
 @media (max-width: 500px) {
   header .nav-bar h1 {
     font-size: 3rem;
-    padding: 0 30% 1.4rem;
+    padding: 0 20% 1.4rem;
   }
 }
 header .nav-bar nav {
