--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,7 @@ header {
 
     .nav-bar {
         max-width: 800px;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -27,7 +28,7 @@ header {
 
             @media @mobile {
                 font-size: 3rem;
-                padding: 0 30% 1.4rem;
+                padding: 0 20% 1.4rem;
             }
         }
 
